# BGSI-GeneticAnalysisSupportPlatformIndonesia-GASPI

./: .gitignore  .gitmodules  .terraform.lock.hcl  README-Makefile.md  atlantis.yaml  backups.tf  env.sh  main.tf  permissions.html  terraform.tfvars.example  test_csv_deidentify.py  test_csv_medical.csv  test_csv_medical_output.csv  test_deidentify.py  test_deidentify_simple.py  test_json_deidentify.py  test_json_simple.json  test_medical_deidentify.py  test_medical_mask.py  test_medical_patterns.py  test_medical_record.json  test_pii_vcf.vcf  variables.tf  versions.tf
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
cognito/: MIGRATION_GUIDE.md  MITIGATION_COMPARISON.md  PROCESS_DIAGRAM.md  README.md  cognito.tf  cognito.tf.treca  migration.tf  outputs.tf  variables.tf
cognito/lambda/sendRegistrationEmail/: lambda_function.py  sbeacon_logo_base64.py
cognito/scripts/: migrate_cognito_users.py  test_migration.sh
gaspifs/: .gitignore  Cargo.toml  Dockerfile  README.md  build_upload.sh  build_upload.tf  source_hash.py  variables.tf  versions.tf
gaspifs/src/: args.rs  auth.rs  main.rs
gaspifs/src/networking/: downloads.rs  files.rs  mod.rs  projects.rs  uploads.rs  util.rs
pgxflow/: docker_images.tf  iam.tf  main.tf
pgxflow/lambda/initFlow/: Dockerfile  lambda_function.py
pgxflow/lambda/preprocessor/: Dockerfile  lambda_function.py
webgui/terraform-aws/: build_and_hash.py  cloudfront.tf  upload.tf  variables.tf
webgui/webapp/: angular.json  package.json  pnpm-lock.yaml  tsconfig.json
webgui/webapp/src/: main.ts  styles.scss
(+136 files in other folders)
