[package]
name = "gaspifs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aws-config = "1.8.6"
aws-sdk-cognitoidentityprovider = "1.97.0"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
home = "0.5.11"
indicatif = "0.18.0"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.23", default-features = false, features = ["stream", "json", "multipart", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"

[dev-dependencies]
mockito = "1.7.0"

[features]
uploads = []
